syntax = "proto3";

option csharp_namespace = "MangoFaaS.Models";

message Invocation {
    string function_id = 1;
    string function_version = 2;
    string correlationId = 3;
    oneof trigger {
        HttpRequestTrigger http_request = 4;
        S3RequestTrigger s3_request = 5;
    }
}

message InvocationResponse {
    string correlationId = 1;
    oneof response {
        HttpResponseTrigger http_response = 2;
    }
}

message HttpRequestTrigger {
    string method = 1;
    string host = 2;
    string path = 3;
    string body = 4;
    map<string, string> headers = 5;
}

message HttpResponseTrigger {
    int32 status_code = 1;
    bytes body = 2;
    map<string, string> headers = 3;
}

message S3RequestTrigger {
    string url = 1;
}